Refactor stuff to use sails app structure in a hook

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "mocha": "^3.4.2",
     "sails": "^0.12.13",
+    "sails-util-mvcsloader": "^0.4.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   }
