Add dependencies where they belong

--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "mocha": "^3.4.2",
     "sails": "^0.12.13",
     "sails-disk": "^0.10.10",
-    "sails-util-mvcsloader": "^0.4.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sails-util-mvcsloader": "^0.4.0"
+  }
 }
