--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "lodash.mergewith": "^4.6.0",
     "sails-util-mvcsloader": "^0.4.0"
   }
 }
