--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-hook-adminx",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "AdminX panel hook for Sails.js",
   "keywords": [
     "sails",
@@ -15,13 +15,13 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/albertpeiro/sails-hook-adminx"
+    "url": "https://github.com/adminxhq/sails-hook-adminx"
   },
   "author": {
     "name": "Albert Peiró",
     "email": "acordonet@gmail.com"
   },
-  "private": true,
+  "private": false,
   "devDependencies": {
     "mocha": "^3.4.2",
     "sails": "^0.12.13",
