Change name back after trying ugly NPM org scoping

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adminxhq/sails-hook-adminx",
+  "name": "sails-hook-adminx",
   "version": "0.0.2",
   "description": "AdminX panel hook for Sails.js",
   "keywords": [
