Add name to schema

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sails-hook-adminx",
-  "version": "0.0.2",
-  "description": "AdminX panel hook for Sails.js",
+  "version": "0.0.5",
+  "description": "AdminX hook for Sails.js",
   "keywords": [
     "sails",
     "hook",
