--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-hook-adminx",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "AdminX hook for Sails.js",
   "keywords": [
     "sails",
@@ -19,7 +19,7 @@
   },
   "author": {
     "name": "Albert Peiró",
-    "email": "acordonet@gmail.com"
+    "email": "albert@adminx.io"
   },
   "private": false,
   "devDependencies": {
