--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@
 # https://docs.travis-ci.com/user/customizing-the-build #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
+# Copied from the SailsJS project
+
 language: node_js
 
 node_js:
