Finish up final touches to make this work with real demo sails-1.0-demo

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "lodash.mergewith": "^4.6.0",
+    "numeral": "^2.0.6",
     "sails-util-mvcsloader": "https://github.com/adminxhq/sails-util-mvcsloader"
   },
   "scripts": {
